# jbmopper.github.io

./: .env.example  .gitignore  CNAME  README.md  REQUIREMENTS.md  agent-observable-wiring.md  astro.config.mjs  package-lock.json  package.json  playwright.config.ts  pyproject.toml  tsconfig.json
.cursor/rules/: observable-wiring.mdc
.github/workflows/: ci.yml  deploy-pages.yml  deploy.yml  secret-scan.yml
content/notebooks/: head.html  local_tiny.py
content/notebooks/local-tiny/: index.py
notebook_helpers/: __init__.py  pyproject.toml
notebook_helpers/tests/: test_helpers.py
public/: site-theme.css
public/notebooks/local-tiny/: index.html
public/notebooks/local_tiny/: index.html
public/observable/: index.html
public/observable/_import/: astro-bridge-theme.1614bf1c.css  astro-bridge-theme.21c55a64.css  astro-bridge-theme.255eed1d.css  astro-bridge-theme.32ddd78c.css  astro-bridge-theme.4ecc77ab.css  astro-bridge-theme.c1ee6b3c.css  astro-bridge-theme.df4cc562.css
public/observable/_observablehq/: client.96fe71ba.js  client.cbf2d9f3.js
scripts/: export-notebooks.sh  inline-notebook-helpers.py  postprocess-observable-export.mjs  verify-exports.ts  verify-observable-export.mjs
src/: middleware.ts
src/components/: Chatbot.svelte  ObservableEmbed.astro
src/config/: deep-learning-fundamentals-sections.ts
src/data/: projects.test.ts  projects.ts
src/layouts/: BaseLayout.astro  Layout.astro
src/pages/: about.astro  index.astro  root_index.md
src/styles/: theme-tokens.css
tests/e2e/: observable-embed.spec.ts
(+123 files in other folders)
