[project]
name = "jbmopper.github.io"
version = "0.0.1"
description = "Portfolio site and marimo notebook exports"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "marimo>=0.19",
    "polars>=0.20",
    "plotly>=5.18",
]

[tool.uv.sources]

[project.optional-dependencies]
# Uncomment if a notebook needs these for local run/export only (not WASM)
# dev = ["torch", "pytest"]

[dependency-groups]
dev = ["ruff>=0.8"]

# Ruff: one linter/formatter for Python (replaces Pylint, Flake8, Black, isort).
# Run: uv run ruff check .   and   uv run ruff format .
[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"content/notebooks/*.py" = ["N806"]

[tool.ruff.format]
quote-style = "double"
